added resume, fix content padding

--- a/about/index.html
+++ b/about/index.html
@@ -3,3 +3,4 @@ layout: default
 ---
 <p>I am a full stack web developer living in New York City, tragically fasinated with stargazing.</p>
 <p>Github: <a href="https://github.com/pstierhoff">pstierhoff</a></p>
+<p><a href="/assets/resume.pdf" target="_blank">Resume</a></p>
