--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
         <a href="/stellar-evolution/">
           <h3>Stellar Evolution Data Visualization</h3>
         </a>
-        <p>D3 datavisualization of stellar evolution at varrying masses.</p>
+        <p>D3 data visualization of stellar evolution up to red giant stage with zero-metallicity at varrying masses.</p>
       </div>
     </div>
   </div>
